--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,7 +39,7 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// eg. ./init.sh or python installer.py
-	"postCreateCommand": "bash post-create.sh",
+	"postCreateCommand": "zsh .devcontainer/post-create.sh",
 
 	// Add recommended secrets
 	"secrets": {
