exposing app and ports automatically

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -25,7 +25,7 @@ COPY ./etc/update-motd.d/00-header /etc/update-motd.d/
 RUN apt install python3 python3-pip -y
 
 # Install NodeJS
-RUN apt install nodejs
+RUN apt install nodejs -y 
 
 # Install yq
 RUN wget https://github.com/mikefarah/yq/releases/download/$YQ_VERSION/$YQ_BINARY -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
