--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,10 +25,11 @@
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [
-		8080
+		8080, 3000
 	],
 	// add labels
 	"portsAttributes": {
+		"3000": { "label": "Lab Guide" },
 		"8080": { "label": "Astroshop Web UI" }
 	},
 
