--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -44,16 +44,13 @@
 	// Add recommended secrets
 	"secrets": {
 		"DT_TENANT": {
-			 "description": "eg. abc12345 from https://abc12345.apps.dynatrace.com"
+			 "description": "eg. abc123 for live -> https://abc123.live.dynatrace.com or sprint -> https://abc123.sprint.dynatracelabs.com no apps in the URL"
 	 },
-		"DT_API_TOKEN": {
-			 "description": "eg. abc12345 from https://abc12345.apps.dynatrace.com"
+		"DT_OPERATOR_TOKEN": {
+			 "description": "Dynatrace Operator Token, it will be created automatically when adding a new Cluster over the UI. It contains the following permissions: 'Create ActiveGate tokens' 'Read entities' 'Read settings' 'Write settings' 'Access probrem and event feed, metrics and topology' 'PaaS Integration - installer download'"
 	 },
 		"DT_INGEST_TOKEN": {
-			 "description": "eg. abc12345 from https://abc12345.apps.dynatrace.com"
-	 },
-		"DT_OTEL_API_TOKEN": {
-			 "description": "eg. abc12345 from https://abc12345.apps.dynatrace.com"
+			 "description": "Dynatrace Ingest Token, it will be created automatically when adding a new Cluster over the UI. It contains the following permissions: 'Ingest logs' 'Ingest metrics' 'Ingest OpenTelemetry traces' "
 	 }
   }
 }
