--- a/.devcontainer/astroshop/helm/dt-otel-demo-helm-deployments/values.yaml
+++ b/.devcontainer/astroshop/helm/dt-otel-demo-helm-deployments/values.yaml
@@ -7,7 +7,7 @@ opentelemetry-demo:
     loadgenerator:
       envOverrides:
         - name: LOCUST_HOST
-          value: "http://astroshop-frontendproxy"
+          value: "http://astroshop-frontendproxy:8080"
     frontend:
       envOverrides:
       - name: DT_LOGLEVELCON # https://www.dynatrace.com/support/help/shortlink/agent-logging
