--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -1,4 +1,4 @@
-name: Enablement Framework CI Tests
+name: DT-Enablement CI Tests
 run-name: ${{ github.event.head_commit.message }} - Core tests
 permissions:
   contents: write
